# dmimgproject2

./: .gitignore  Makefile.in  README.md  configure  configure.ac
src/: Makefile.am  Makefile.in  dmimgproject.c  dmimgproject.par  dmimgproject.xml  dmimgproject2.par  dmimgproject2.xml  t_dmimgproject.c
test/: Makefile.am  Makefile.in  dmimgproject2.t
test/indata/dmimgproject2/: gradient.fits  gradient_135.fits  gradient_30.fits  gradient_45.fits  gradient_70.fits  image.fits
test/save_data/dmimgproject2/: gradient135.fits  gradient30.fits  gradient45.fits  gradient70.fits  gradientX.fits  gradientY.fits  imageX.fits  imageXbin2.fits  imageXcropX.fits  imageXcropY.fits  imageY.fits
wrapper/: Makefile.am  Makefile.in
